# Nociones-Clave

./: CMakeLists.txt  README.md  main.cpp
proyecto/: estudiante.cpp  estudiante.h  main.cpp  main.h  persona.cpp  persona.h
proyecto 2/: funciones.cpp  funciones.h  matematicas.cpp  matematicas.h  nuevo.cpp  nuevo.h
